переделал задачи под стримы